# google-recaptcha

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
google_recaptcha/: __init__.py  recaptcha.py
google_recaptcha/templates/: recaptcha.html  recaptcha_v2.html
