[tool.poetry]
name = "google-recaptcha"
version = "0.1.0"
description = "Standalone google recaptcha version 3"
authors = ["Jordan Raychev <jpraychev@gmail.com>"]
maintainers = [
    "Jordan Raychev <jpraychev@gmail.com>",
]
readme = "README.md"
packages = [{include = "google_recaptcha"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"