[tool.poetry]
name = "google-recaptcha"
version = "1.1.3"
description = "Google recaptcha helps you protect your web form by using google's latest recaptcha (Completely Automated Public Turing test to tell Computers and Humans Apart) technology."
authors = ["Jordan Raychev <jpraychev@gmail.com>"]
maintainers = ["Jordan Raychev <jpraychev@gmail.com>"]
packages = [{include = "google_recaptcha"}]
license = "MIT"
readme = "README.md"
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
keywords = ["recaptcha", "google recaptcha"]
repository = "https://github.com/jpraychev/google-recaptcha"
homepage = "https://github.com/jpraychev/google-recaptcha"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"